# XD

./: .gitattributes  .gitignore  6.5计划.md  CHANGELOG.md  Dockerfile  LICENSE  LICENSE_CODE  NOTICE  README.md  XuanDun.manifest.template  pyproject.toml  安全测试报告.md  开发计划.md  玄盾.md
.github/workflows/: release.yml
.trae/documents/: xuandun-anti-reverse-open-source-triple-build.md  xuandun-final-execution-plan.md  xuandun-sprint-15-16-remaining-execution.md
archive/legacy_scripts/: _check_agents.ps1  _check_procs.ps1  _stop.ps1  auto_test.py  benchmark.py  check_proc.ps1  cleanup.py  cleanup2.py  debug_test.py  decompile.py  decompile2.py  demo.py  desktop_xuandun_test.py  detection_rate_test.py  diag.bat  env_check.py  final_audit.py  final_audit2.py  fix_all.py  fix_all2.py  fix_all3.py  fix_chars.py  fix_chars2.py  fix_comprehensive.py  fix_comprehensive2.py  fix_encoding.py  fix_final.py  fix_ultimate.py  mcp_perf_test.py  mini_test.py  quick_test.py  run_all_desktop_tests.py  run_benchmark.py  run_desktop_tests.py  run_industry_benchmarks.ps1  security_stress_test.py  serve.py  test_benchmark_attacks.py  test_char_deviation.py  test_core_perf.py  (+10 more)
desktop/xuandun-desktop/: anti_debug.py  attack_samples.py  build_engine.py  build_engine_pyinstaller.py  engine_flask.py  engine_main.py  generate_icons.py  index.html  industry_samples.py  package-lock.json  package.json  (+9 more)
desktop/xuandun-desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/xuandun-desktop/src-tauri/capabilities/: default.json
desktop/xuandun-desktop/src-tauri/icons/: icon.icns
desktop/xuandun-desktop/src-tauri/src/: agent_discovery.rs  commands.rs  db.rs  engine.rs  keyring.rs  lib.rs  main.rs  proxy.rs  tray.rs
docs/: AUDIT_REPORT_20260708.md  AUDIT_REPORT_GLOBAL_20260708.md  Demo演示脚本.md  FIX_ROADMAP_20260708.md  PRD_XuanDun_Desktop copy.md  UI规范.md  benchmark_honest_statement.md  benchmarks.md  owasp_improvement_plan.md  产品迭代规划.md  企业评估工具包迭代计划.md  模拟测试.md  灰度验证方案.md  用户指南.md  白皮书.md  端到端验证清单.md  道体·玄盾 产品优化方案.md  部署指南.md
industry_benchmarks/: __init__.py  __main__.py  run.py
scripts/: code_quality_gate.py  graymon.py  verify_installation.py
tests/: conftest.py  test_alerts_e2e.py  test_ancient_mapper.py  test_audit_deep.py  test_dynamic_shell.py  test_observing_mode.py  test_reject_gate.py  test_s6_verify.py  test_timing_checker.py  test_xuandun.py
(+78 files in other folders)
