[package]
name = "xuandun-desktop"
version = "1.0.0"
description = "道体·玄盾 桌面安全守护"
authors = ["Daoti Team"]
edition = "2021"

[lib]
name = "xuandun_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
sysinfo = "0.33"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "column_decltype"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
once_cell = "1.19"
url = "2"
sha2 = "0.10"
keyring = "3"
